--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-export ACCOUNT_NAME=user@example.com
-export PASSWORD=1234
-export PHONE_NUMBER_LAST_DIGITS=42
-export PODCAST_URL=https://podcastsconnect.apple.com/analytics/podcast_title/123456789/overview
+ACCOUNT_NAME=user@example.com
+PASSWORD=1234
+PHONE_NUMBER_LAST_DIGITS=42
+PODCAST_URL=https://podcastsconnect.apple.com/analytics/podcast_title/123456789/overview
+LOGLEVEL=info
