--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "playright": "^0.0.22"
+    "playright": "^0.0.22",
+    "winston": "^3.8.2"
   }
 }
