--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "express": "^4.18.2",
     "playright": "^0.0.22",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
   }
 }
