- HEADLESS env var added - 502 status code when code wasn't received

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PASSWORD=1234
 PHONE_NUMBER_LAST_DIGITS=42
 PODCAST_URL=https://podcastsconnect.apple.com/analytics/podcast_title/123456789/overview
 LOGLEVEL=info
+HEADLESS=TRUE
